.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Total_Reward__c.object
<CustomObject>
    <description>Data for total rewards.  Use for points based benefits</description>
    <fields>
        <fullName>xcdhcm__Annual_allowances__c</fullName>
        <label>Annual allowances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Annual_benefits__c</fullName>
        <label>Annual benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Total Reward</relationshipLabel>
        <relationshipName>Total_Reward</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_contribution__c</fullName>
        <label>Employee contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer_contribution__c</fullName>
        <label>Employer contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payment_amount__c</fullName>
        <label>Payment amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Regular_payment_amount__c</fullName>
        <label>Regular payment amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_annual_benefit__c</fullName>
        <label>Total annual benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_annual_contribution__c</fullName>
        <label>Total annual contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Total Reward</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Total reward ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Total Reward</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>